@@ -11,6 +11,7 @@ Version 1.1.1 to be released
 - Bug #871: A module generated by the yiic module command did not use the application layout by default (Qiang)
 - Bug: Setting the 'with' option in criteria array doesn't trigger eager loading for AR (Qiang)
 - Bug: CActiveRecord should update oldPrimaryKey after calling save() (Qiang)
+- Enh #686: Added CUrlManager::setBasePath (Qiang)
 - Enh #872: Added CFlexWidget::allowFullScreen (Qiang)
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
